# pptx-slide-copier

./: .clauderules  .gitignore  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ooxml-slide-copy-internals.md
pptx_slide_copier/: __init__.py  slide_copier.py
tests/: __init__.py  test_slide_copier.py
