[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx-slide-copier"
version = "0.1.0"
description = "PowerPoint slide copier utility with deep copying of shapes, images, and formatting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SpringMT", email = "today.is.sky.blue.sky@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["powerpoint", "pptx", "presentation", "slide", "copy"]
dependencies = [
    "python-pptx>=1.0.2",
]

[project.urls]
Homepage = "https://github.com/SpringMT/pptx-slide-copier"
Repository = "https://github.com/SpringMT/pptx-slide-copier"
Issues = "https://github.com/SpringMT/pptx-slide-copier/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
